<resources>
    <string name="app_name">BeHere</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."    </string>
    <string name="facebook_app_id">2294099100612100</string>
    <string name="fb_login_protocol_scheme">fb2294099100612100</string>
    <string name="Home">HOME</string>
    <string name="apptitle">BE-HERE</string>
    <string name="name_champ">Name</string>
    <string name="surnname_champ">Surname</string>
    <string name="email_champ">Email</string>
    <string name="birthdate_champ">Birthdate</string>
    <string name="password_champ">Password</string>
    <string name="checkPassword_champ">CheckPassword</string>
    <string name="continue_champ">continue</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_testvoila">testvoila</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_test_tab">testTab</string>
    <string name="Profile">PROFILE</string>
    <string name="myProfile">My Profile</string>
    <string name="home">HOME</string>
    <string name="disconnect">Disconnect</string>
    <string name="mygroups">My Groups</string>
    <string name="lexical">Lexical</string>
    <string name="access_token">ACCESS_TOKEN</string>
    <string name="prefs">PREFS</string>
    <string name="longitude">LONGITUDE</string>
    <string name="latitude">LATITUDE</string>
    <string name="add">Add</string>
    <string name="delete_upercase">DELETE</string>
    <string name="add_upercase">ADD</string>
    <string name="friends">Friends</string>
    <string name="prefs_id">USER_ID</string>
    <string name="default_piece">default</string>
    <string name="join_upercase">JOIN</string>
    <string name="waiting_uppercase">WAITING</string>
    <string name="accept_uppercase">ACCEPT</string>
    <string name="leave_uppercase">LEAVE</string>
    <string name="members">Members</string>
    <string name="nocomments_uppercase">NO COMMENTS</string>
    <string name="membersList">Members List</string>
</resources>
