<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/beerwallpaper2"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <!-- Login progress -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">


            <TextView
                android:id="@+id/tVTitle"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/apptitle"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                app:layout_constraintBottom_toTopOf="@+id/login" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email_champ"
                android:hint="@string/email_champ"
                android:inputType="textEmailAddress"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textColorHint="#F6F6F6"
                 />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_champ"
                android:autofillHints="@string/password_champ"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:textColor="@color/browser_actions_bg_grey"
                android:textColorHint="#F6F6F6" />
        </android.support.design.widget.TextInputLayout>


        <Button
                android:id="@+id/btnSignIn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="SIGN IN"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btnRegisterLastStep"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.511" />

            <Button
                android:id="@+id/btnRegisterLastStep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="REGISTER"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />
    </LinearLayout>
</ScrollView>